# CircuitPython_mag_cal

./: README.rst  axes.py  calibration.py  lstsq.py  mag_cal.py  nm.py  pyproject.toml  rbf.py  requirements.txt  sensor.py  utils.py
.github/workflows/: release_pypi.yml
.reuse/: dep5
docs/: api.rst  conf.py  examples.rst  howto.rst  howto.rst.license  index.rst
examples/: mag_cal_simpletest.py
mag_cal/: __init__.py  axes.py  calibration.py  lstsq.py  rbf.py  sensor.py  utils.py
tests/: test_axes.py  test_calibration.py  test_mag_cal.py  test_sensor.py
tests/fixtures/SAP6/: BB.cfg  BB.json  CF.cfg  CF.json  FG.cfg  FG.json  HC.cfg  HC.json  HC_improved.json  IB.cfg  IB.json  JG.cfg  JG.json
tests/fixtures/cal_data/: ab.json  ai.json  bh.json  bi.json  ee.json  fb.json  hj.json  hj2.json  jd.json
